Downcast dtypes for memory optimization

--- a/notebooks/01-data-prep.ipynb
+++ b/notebooks/01-data-prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 36,
    "id": "cba510b5-9955-4574-abc8-c1e7f2a42e52",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 37,
    "id": "079bf59a-0711-4cd5-b055-83f8d343c05c",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 38,
    "id": "798d49dd-a016-47fe-8e5d-01b34c90c637",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 39,
    "id": "34154d87-2d42-4d2d-95ed-59b1e1c0e885",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 40,
    "id": "b23540d5-7978-4605-a02e-b53207fe3826",
    "metadata": {
     "scrolled": true
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 41,
    "id": "acfdc719-1479-466d-8336-8750349b79a8",
    "metadata": {},
    "outputs": [
@@ -326,7 +326,7 @@
        "array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12])"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 42,
    "id": "161278f1-bfb9-4609-abc7-501fbbae0af3",
    "metadata": {},
    "outputs": [],
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 43,
    "id": "6f36c80c-e881-44f0-92ea-ef5bb920124c",
    "metadata": {},
    "outputs": [],
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 44,
    "id": "4625101f-a839-47aa-8d49-a00dacc56f31",
    "metadata": {},
    "outputs": [
@@ -398,7 +398,7 @@
        "array([2, 3, 4, 1, 7, 5, 6])"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 45,
    "id": "88b73610-df6d-4ead-9820-64d22e0ef025",
    "metadata": {},
    "outputs": [
@@ -430,7 +430,7 @@
        "array([1, 2, 3])"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 46,
    "id": "768e6ad5-2d75-44ee-bc7a-61d3b0a5c360",
    "metadata": {},
    "outputs": [],
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 47,
    "id": "e7a436f0-76f2-4fea-823d-931538e1f4bd",
    "metadata": {},
    "outputs": [
@@ -482,7 +482,7 @@
        "       46, 47, 48, 49, 50])"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 48,
    "id": "3c95fa71-2ce3-4230-949c-6e57afd7fe28",
    "metadata": {},
    "outputs": [
@@ -514,7 +514,7 @@
        "array([1, 2, 3])"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 49,
    "id": "ab849129-8c25-49bd-9125-0e56c60d201f",
    "metadata": {},
    "outputs": [],
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 50,
    "id": "0e7d119d-ca59-4abc-a3b5-69a60d0a1747",
    "metadata": {},
    "outputs": [
@@ -564,7 +564,7 @@
        "array([3, 6, 4, 7, 8, 9, 2, 5, 1])"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 51,
    "id": "810ac13d-209e-4eb9-becf-6afe7b935e9b",
    "metadata": {},
    "outputs": [],
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 52,
    "id": "52824f3d-22f6-47a5-8f96-0d5fb9ffcced",
    "metadata": {},
    "outputs": [
@@ -611,7 +611,7 @@
        "       68, 69, 70, 71, 72, 76, 77, 80, 88, 90, 99])"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 53,
    "id": "3a6f3e7e-8593-4cc1-b7f7-d9b895d63023",
    "metadata": {},
    "outputs": [],
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 54,
    "id": "f55629b6-5b87-48b9-93d3-8db53c1473aa",
    "metadata": {},
    "outputs": [
@@ -655,7 +655,7 @@
        "(np.float64(13.0), np.float64(99.9))"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 55,
    "id": "ab98bc04-69b9-4d2f-9379-930cc6b1602d",
    "metadata": {},
    "outputs": [],
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 56,
    "id": "de6e6b3b-cb65-4cab-a759-a39acf31faa0",
    "metadata": {},
    "outputs": [
@@ -698,7 +698,7 @@
        "array([1, 0, 9])"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 57,
    "id": "fa76f55f-03f6-4e58-8ab2-5844ba4f40b3",
    "metadata": {},
    "outputs": [],
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 58,
    "id": "742a63b6-0cbf-49b9-ab5e-c780e2c6c819",
    "metadata": {},
    "outputs": [
@@ -747,7 +747,7 @@
        "array([1, 2, 9])"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 59,
    "id": "e9b1464a-7f42-4382-b347-5cf88688ed52",
    "metadata": {},
    "outputs": [],
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 60,
    "id": "c4aaf3ec-e6e6-4b32-863b-d587ce2c92e8",
    "metadata": {},
    "outputs": [],
@@ -800,12 +800,12 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "# Drop np.nan"
+    "# Drop np.nan and downcast dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 61,
    "id": "3466bcbd-5ef9-4a86-81eb-1197303b321f",
    "metadata": {},
    "outputs": [
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 62,
    "id": "10771299-a0d5-460a-bf93-4eb719103e83",
    "metadata": {},
    "outputs": [],
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 63,
    "id": "49c8e3ad-33eb-43e3-8114-3d1c0c0772a6",
    "metadata": {},
    "outputs": [
@@ -873,7 +873,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\austi\\AppData\\Local\\Temp\\ipykernel_13548\\3705305132.py:4: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\austi\\AppData\\Local\\Temp\\ipykernel_20260\\3705305132.py:4: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df.replace({'Y': 1, 'N': 0}, inplace=True)\n"
      ]
     }
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 64,
    "id": "e4020d3c-08e8-4b0d-ad72-74c8d8c176c1",
    "metadata": {},
    "outputs": [],
@@ -899,7 +899,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 65,
+   "id": "c3027d02-e59d-441d-a988-f070517ed6ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Downcast dtypes to optimize memory footprint\n",
+    "fcols = df.select_dtypes('float').columns\n",
+    "icols = df.select_dtypes('integer').columns\n",
+    "\n",
+    "df[fcols] = df[fcols].apply(pd.to_numeric, downcast='float')\n",
+    "df[icols] = df[icols].apply(pd.to_numeric, downcast='integer')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "id": "4b459156-1b53-4607-8661-352c67bf977a",
    "metadata": {},
    "outputs": [
@@ -912,33 +927,33 @@
       "Data columns (total 25 columns):\n",
       " #   Column             Dtype  \n",
       "---  ------             -----  \n",
-      " 0   month              int64  \n",
-      " 1   time               float64\n",
-      " 2   day                int64  \n",
-      " 3   hospital           int64  \n",
-      " 4   m_age              int64  \n",
-      " 5   m_us_born          int64  \n",
-      " 6   m_edu              int64  \n",
-      " 7   num_of_prenatals   int64  \n",
-      " 8   WIC                int64  \n",
-      " 9   smoker             int64  \n",
-      " 10  m_bmi              float64\n",
-      " 11  pre_diabetes       int64  \n",
-      " 12  gest_diabetes      int64  \n",
-      " 13  pre_hypertension   int64  \n",
-      " 14  gest_hypertension  int64  \n",
-      " 15  eclampsia          int64  \n",
-      " 16  preterm_births     int64  \n",
-      " 17  infert_treatment   int64  \n",
-      " 18  prev_c_section     int64  \n",
-      " 19  sti                int64  \n",
-      " 20  induction          int64  \n",
-      " 21  steroids           int64  \n",
-      " 22  antibiotics        int64  \n",
-      " 23  anesthesia         int64  \n",
-      " 24  c_section          int64  \n",
-      "dtypes: float64(2), int64(23)\n",
-      "memory usage: 672.1 MB\n"
+      " 0   month              int8   \n",
+      " 1   time               float32\n",
+      " 2   day                int8   \n",
+      " 3   hospital           int8   \n",
+      " 4   m_age              int8   \n",
+      " 5   m_us_born          int8   \n",
+      " 6   m_edu              int8   \n",
+      " 7   num_of_prenatals   int8   \n",
+      " 8   WIC                int8   \n",
+      " 9   smoker             int8   \n",
+      " 10  m_bmi              float32\n",
+      " 11  pre_diabetes       int8   \n",
+      " 12  gest_diabetes      int8   \n",
+      " 13  pre_hypertension   int8   \n",
+      " 14  gest_hypertension  int8   \n",
+      " 15  eclampsia          int8   \n",
+      " 16  preterm_births     int8   \n",
+      " 17  infert_treatment   int8   \n",
+      " 18  prev_c_section     int8   \n",
+      " 19  sti                int8   \n",
+      " 20  induction          int8   \n",
+      " 21  steroids           int8   \n",
+      " 22  antibiotics        int8   \n",
+      " 23  anesthesia         int8   \n",
+      " 24  c_section          int8   \n",
+      "dtypes: float32(2), int8(23)\n",
+      "memory usage: 126.0 MB\n"
      ]
     }
    ],
@@ -949,14 +964,16 @@
   {
    "cell_type": "markdown",
    "id": "15b2d3e8-1321-4baa-bb2e-af60995be7ae",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Store processed data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 67,
    "id": "f1a6b79b-d77a-4e25-837e-0c2d218fc297",
    "metadata": {},
    "outputs": [],
@@ -967,31 +984,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 68,
    "id": "ea4f867a-1d75-41be-9adc-dd07ca75f520",
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv(DATA_PATH, index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
-   "id": "16e78cb1-f668-4310-ac2a-1976813a0965",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Try downcasting the dtypes of the predictors to save space"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "06d1a510-0477-4576-88b2-7fd356167b75",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
