Fix typos and formatting

--- a/notebooks/02-analysis.ipynb
+++ b/notebooks/02-analysis.ipynb
@@ -42,6 +42,7 @@
     "eda_sample_size = 20000\n",
     "\n",
     "# sample size of the data to use for hyperparameter tuning\n",
+    "# and model selection\n",
     "train_sample_size = 10000"
    ]
   },
@@ -913,7 +914,7 @@
     "Since the data is mostly categorical, we will elect to use a Decision Tree classifier\n",
     "as our benchmark and compare it with the performance of Random Forest and Boosting classifiers.\n",
     "\n",
-    "There are several things we could try when setting up the preprocessor:\n",
+    "There are several things we could try when preprocessing:\n",
     "- Scale the variables treated as continuous\n",
     "- Treat month and day as categorical and non-ordinal\n",
     "- Replace day with a binary feature with weekday/weekend categories\n",
@@ -984,12 +985,12 @@
     "We will then train test split using all the data. This, of course,\n",
     "would be unnecessary with more computing power.\n",
     "\n",
-    "When evaluating a model, it's worth mentioning that c_sections \n",
+    "When evaluating a model, it's worth mentioning that C-sections \n",
     "comprise of ~32.4% of all births in 2024, so a model should have \n",
     "an accuracy score of at least 0.676 to be better than the \n",
     "trivial classifier. For predictions, we must also evaluate the model's \n",
-    "recall score. Not getting a c-section when it is medically necessary\n",
-    "is much more dangerous than getting a c-section that isn't necessary."
+    "recall score. Not getting a C-section when it is medically necessary\n",
+    "is much more dangerous than getting a C-section that isn't necessary."
    ]
   },
   {
